# wlframe

./: .clang-format  .editorconfig  .gitignore  CONTRIBUTING.md  README.md  VAAPI_JPEG_FEATURE.md  meson.build  meson_options.txt  test_vaapi_jpeg.sh  wlframe.md  wlframe.syms
animator/: README.md  meson.build  wlf_animation_group.c  wlf_animator.c  wlf_animator_curve.c  wlf_animator_curve_back.c  wlf_animator_job.c  wlf_curve.c  wlf_curve_back.c  wlf_curve_bounce.c  wlf_curve_circ.c  wlf_curve_cubic.c  wlf_curve_elastic.c  wlf_curve_expo.c  wlf_curve_linear.c  wlf_curve_quad.c  wlf_curve_quart.c  wlf_curve_quint.c  wlf_curve_sine.c  wlf_double_animation.c  wlf_height_animator.c  wlf_opacity_animator.c  wlf_parallel_animation.c  wlf_rotation_animator.c  wlf_scale_animator.c  wlf_scene_node_height_animation.c  wlf_scene_node_opacity_animation.c  wlf_scene_node_width_animation.c  wlf_scene_node_x_animation.c  wlf_scene_node_y_animation.c  wlf_sequential_animation.c  wlf_uniform_animator.c  wlf_width_animator.c  wlf_x_animator.c  wlf_y_animator.c
backend/wayland/: meson.build  wlf_wl_backend.c  wlf_wl_compositor.c  wlf_wl_display.c  wlf_wl_keyboard.c  wlf_wl_pointer.c  wlf_wl_seat.c
backend/wayland/protocol/: meson.build
doc/doxygen/: meson.build  wlf.doxygen.in
docs/doxygen/: .gitignore  custom-doxygen.css  mainpage.dox  meson.build  wlframe.doxygen.in
examples/: animator_demo.c  curve_inheritance_demo.c  font_example.c  image_test.c  meson.build  simple_server.c  surface.c  wayland_registry_test.c  wlf_region_test.c
examples/font/: font_backend_example.c  font_example.c  meson.build
examples/i18n/: advanced_i18n_test.c  i18n_test.c  meson.build
examples/image/: bmp_image_test.c  format_conversion_demo.c  gif_image_test.c  jpeg_image_test.c  meson.build  png_image_test.c  ppm_image_test.c  webp_image_test.c  xbm_image_test.c  xpm_image_test.c
examples/math/: meson.build  wlf_fpoint_test.c  wlf_frect_test.c  wlf_fsize_test.c  wlf_matrix3x3_test.c  wlf_matrix4x4_test.c  wlf_point_test.c  wlf_quaternion_test.c  wlf_ray2_test.c  wlf_ray3_test.c  wlf_ray_test.c  wlf_rect_test.c  wlf_region_test.c  wlf_size_test.c  wlf_vector2_test.c  wlf_vector3_test.c  wlf_vector4_test.c
examples/platform/: backend_demo.c  fontconfig_test.c  meson.build  theme_palette_test.c  wlf_backend_plugin_example.c
examples/svg/: meson.build  svg_example.c  svg_info_test.c
examples/toml/: example.toml  meson.build  toml_example.c
examples/translator/: meson.build  wlf_i18n_example.c
examples/utils/: clipboard_demo.c  meson.build  standard_paths_test.c  theme_palette_test.c  utils_cmd_parser_test.c  utils_hash_test.c  utils_map_test.c
examples/va/: env_backend_test.c  hwdec_backend_test.c  meson.build  recorder_demo.c  va_wayland_test.c  vaapi_jpeg_demo.c  video_decoder_example.c  video_encoder_example.c  wayland_shm_recorder_example.c  wl_buffer_export_example.c
examples/wayland/: meson.build  wayland_registry_test.c
examples/window/: meson.build  window_test.c
font/: README.md  README_BACKEND.md  meson.build  wlf_font.c  wlf_font_backend.c  wlf_font_backend_fontconfig.c  wlf_font_backend_macos.c
include/: meson.build
include/wlf/: config.h.in  meson.build  version.h.in
include/wlf/accel/: wlf_accel.h
include/wlf/math/: wlf_ray.h  (+15 more)
pass/: meson.build  wlf_bezier_curve_pass.c  wlf_border_pass.c  wlf_circle_pass.c  wlf_ellipse_pass.c  wlf_lame_border_pass.c  wlf_lame_rect_pass.c  wlf_lame_texture_pass.c  wlf_line_pass.c  wlf_polygon_pass.c  wlf_radius_border_pass.c  wlf_radius_rect_pass.c  wlf_radius_texture_pass.c  wlf_rect_pass.c  wlf_render_target_info.c  wlf_text_pass.c  wlf_texture_pass.c
pass/pixman/: meson.build  render_target_info.c
pass/vulkan/: meson.build  vulkan.c
scene/: meson.build  wlf_scene.c  wlf_scene_bezier_curve.c  wlf_scene_border.c  wlf_scene_capture.c  wlf_scene_circle.c  wlf_scene_ellipse.c  wlf_scene_lame_border.c  wlf_scene_lame_rect.c  wlf_scene_lame_texture.c  wlf_scene_line.c  wlf_scene_node.c  wlf_scene_polygon.c  wlf_scene_radius_border.c  wlf_scene_radius_rect.c  wlf_scene_radius_texture.c  wlf_scene_rect.c  wlf_scene_text.c  wlf_scene_texture.c  wlf_scene_tree.c
utils/: meson.build  wlf_addon.c  wlf_array.c  wlf_cmd_parser.c  wlf_env.c  wlf_hash.c  wlf_i18n.c  wlf_linked_list.c  wlf_list.c  wlf_log.c  wlf_map.c  wlf_parser.c  wlf_signal.c  wlf_standard_paths.c  wlf_standard_paths_linux.c  wlf_standard_paths_macos.m  wlf_time.c  wlf_utils.c
va/: DOCUMENTATION.md  README.md  VA_API_JPEG_DMABUF.md  VIDEO_RECORDER.md  meson.build  wlf_hwdec.c  wlf_hwdec_software.c  wlf_hwdec_vaapi.c  wlf_hwdec_vulkan.c  wlf_queue.c  wlf_recorder_dmabuf.c  wlf_recorder_pipewire.c  wlf_recorder_wayland_shm.c  wlf_sw_video_buffer.c  wlf_va_display.c  wlf_va_jpeg.c  wlf_va_video_buffer.c  wlf_video_buffer.c  wlf_video_buffer.c.old  wlf_video_decoder.c  wlf_video_decoder_base.c  wlf_video_encoder.c  wlf_video_encoder_base.c  wlf_video_recorder.c  wlf_video_session.c  wlf_vk_video_buffer.c  wlf_vk_video_decoder.c  wlf_vk_video_encoder.c
va/jpeg/: meson.build  wlf_va_jpeg.c
va/wayland/: meson.build  va_display.c  va_display_wayland.c
wayland/: meson.build  wlf_wl_compositor.c  wlf_wl_display.c  wlf_wl_interface.c  wlf_wl_output.c  wlf_wl_pointer.c  wlf_wl_seat.c  wlf_wl_subcompositor.c  wlf_wl_subsurface.c  wlf_wl_surface.c  wlf_wl_touch.c  wlf_wp_alpha_modifier_v1.c  wlf_wp_content_type_manager_v1.c  wlf_wp_content_type_v1.c  wlf_wp_fractional_scale_v1.c  wlf_wp_viewporter.c  wlf_xdg_wm_base.c  wlf_xdg_wm_dialog_v1.c  wlf_zxdg_decoration_manager_v1.c  wlf_zxdg_decoration_v1.c
wayland/protocols/: meson.build
widgets/: meson.build  wlf_abstract_busy_indicator.c  wlf_abstract_button.c  wlf_abstract_checkbox.c  wlf_abstract_combobox.c  wlf_abstract_menu.c  wlf_abstract_progress_bar.c  wlf_abstract_scrollbar.c  wlf_abstract_slider.c  wlf_abstract_switch.c  wlf_abstract_tabbar.c  wlf_busy_indicator.c  wlf_checkbox.c  wlf_combobox.c  wlf_icon_button.c  wlf_menu.c  wlf_progress_bar.c  wlf_scrollbar.c  wlf_slider.c  wlf_switch.c  wlf_tabbar.c  wlf_text_button.c
(+629 files in other folders)
