wlf_files += files(
	'wlf_curve.c',
	'wlf_curve_back.c',
	'wlf_curve_bounce.c',
	'wlf_curve_circ.c',
	'wlf_curve_cubic.c',
	'wlf_curve_elastic.c',
	'wlf_curve_expo.c',
	'wlf_curve_linear.c',
	'wlf_curve_quad.c',
	'wlf_curve_quart.c',
	'wlf_curve_sine.c',
	'wlf_curve_quint.c',
	'wlf_animator.c',
	'wlf_x_animator.c',
	'wlf_y_animator.c',
	'wlf_width_animator.c',
	'wlf_height_animator.c',
	'wlf_opacity_animator.c',
	'wlf_rotation_animator.c',
)
