wlf_files += files(
	'wlf_animator.c',
	'wlf_animator_job.c',
	'wlf_double_animation.c',
	'wlf_animation_group.c',
	'wlf_parallel_animation.c',
	'wlf_sequential_animation.c',
	'wlf_scene_node_x_animation.c',
	'wlf_scene_node_y_animation.c',
	'wlf_scene_node_width_animation.c',
	'wlf_scene_node_height_animation.c',
	'wlf_scene_node_opacity_animation.c',
)
