if is_linux
	subdir('wayland')
endif

subdir('image')
subdir('utils')
subdir('math')
subdir('platform')
subdir('window')

## Animator examples
#executable(
#	'animator_demo',
#	'animator_demo.c',
#	dependencies: wlframe,
#	install: false,
#)

#executable(
#	'curve_inheritance_demo',
#	'curve_inheritance_demo.c',
#	dependencies: wlframe,
#	install: false,
#)
