wlf_files += files(
	'wlf_render_target_info.c',
	'wlf_rect_pass.c',
	'wlf_texture_pass.c',
	'wlf_text_pass.c',
	'wlf_line_pass.c',
	'wlf_circle_pass.c',
	'wlf_ellipse_pass.c',
	'wlf_polygon_pass.c',
	'wlf_bezier_curve_pass.c',
	'wlf_border_pass.c',
	'wlf_radius_rect_pass.c',
	'wlf_radius_texture_pass.c',
	'wlf_radius_border_pass.c',
	'wlf_lame_rect_pass.c',
	'wlf_lame_texture_pass.c',
	'wlf_lame_border_pass.c',
)

if is_linux
	subdir('pixman')
endif
