wlf_files += files(
	'wlf_scene_node.c',
	'wlf_scene_tree.c',
	'wlf_scene_rect.c',
	'wlf_scene_texture.c',
	'wlf_scene_text.c',
	'wlf_scene_radius_rect.c',
	'wlf_scene_radius_texture.c',
	'wlf_scene_line.c',
	'wlf_scene_circle.c',
	'wlf_scene_ellipse.c',
	'wlf_scene_polygon.c',
	'wlf_scene_bezier_curve.c',
	'wlf_scene_border.c',
	'wlf_scene_radius_border.c',
	'wlf_scene_lame_rect.c',
	'wlf_scene_lame_texture.c',
	'wlf_scene_lame_border.c',
)
