wlf_files += files(
	'wlf_wl_interface.c',
	'wlf_wl_compositor.c',
	'wlf_wl_output.c',
	'wlf_wl_pointer.c',
	'wlf_wl_touch.c',
	'wlf_wl_surface.c',
	'wlf_wp_content_type_v1.c',
	'wlf_zxdg_decoration_v1.c',
	'wlf_wp_viewporter.c',
	'wlf_wl_seat.c',
	'wlf_wp_alpha_modifier_v1.c',
	'wlf_wl_subsurface.c',
	'wlf_wl_subcompositor.c',
	'wlf_xdg_wm_base.c',
	'wlf_xdg_wm_dialog_v1.c',
)

subdir('protocols')
