wlf_files += files(
	'wlf_abstract_button.c',
	'wlf_abstract_busy_indicator.c',
	'wlf_abstract_checkbox.c',
	'wlf_abstract_combobox.c',
	'wlf_abstract_menu.c',
	'wlf_abstract_progress_bar.c',
	'wlf_abstract_scrollbar.c',
	'wlf_abstract_slider.c',
	'wlf_abstract_switch.c',
	'wlf_abstract_tabbar.c',
	'wlf_busy_indicator.c',
	'wlf_checkbox.c',
	'wlf_combobox.c',
	'wlf_icon_button.c',
	'wlf_menu.c',
	'wlf_progress_bar.c',
	'wlf_scrollbar.c',
	'wlf_slider.c',
	'wlf_switch.c',
	'wlf_tabbar.c',
	'wlf_text_button.c',
)
