video_decoder_example = executable('video_decoder_example',
	'video_decoder_example.c',
	dependencies: [wlframe_dep],
	install: false,
)

video_encoder_example = executable('video_encoder_example',
	'video_encoder_example.c',
	dependencies: [wlframe_dep],
	install: false,
)

hwdec_backend_test = executable('hwdec_backend_test',
	'hwdec_backend_test.c',
	dependencies: [wlframe_dep],
	install: false,
)

env_backend_test = executable('env_backend_test',
	'env_backend_test.c',
	dependencies: [wlframe_dep],
	install: false,
)

wl_buffer_export_example = executable('wl_buffer_export_example',
	'wl_buffer_export_example.c',
	dependencies: [wlframe_dep, wayland_client_dep],
	install: false,
)

vaapi_jpeg_demo = executable('vaapi_jpeg_demo',
	'vaapi_jpeg_demo.c',
	dependencies: [wlframe_dep],
	install: false,
)
